# mojentic-coder

./: .coverage  .gitignore  PRODUCT.md  README.md  pyproject.toml  pytest.ini
.junie/: guidelines.md
src/mojentic_coder/: __init__.py  __main__.py  config.py  main.py
src/mojentic_coder/models/: __init__.py  agent.py  engineering_goal.py
src/mojentic_coder/panels/: __init__.py  agent_management.py  chat_session.py  engineering_goals_panel.py  project_context.py  tracer_panel.py
src/mojentic_coder/services/: README.md  __init__.py  agent_service.py  agent_service_spec.py  engineering_goal_service.py  interfaces.py  message_service.py  message_service_spec.py  service_provider.py  tracer_service.py
